api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_answer_available_streams_empty.snap
---
source: api/src/v1/serde_tests.rs
expression: "Answer::AvailableStreams(vec![])"
---
{
  "type": "availableStreams",
  "content": []
}
