api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_answer_peer_id.snap
---
source: api/src/v1/serde_tests.rs
expression: "Answer::PeerId(answer)"
---
{
  "type": "peerId",
  "content": {
    "id": "00000000-0000-0000-0000-000000000000"
  }
}
