api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_api_video_source.snap
---
source: api/src/v1/serde_tests.rs
expression: val
---
{
  "name": "USB Camera",
  "source": "/dev/video0",
  "formats": [
    {
      "encode": "H264",
      "sizes": [
        {
          "width": 1920,
          "height": 1080,
          "intervals": [
            {
              "numerator": 1,
              "denominator": 30
            }
          ]
        }
      ]
    }
  ],
  "controls": [
    {
      "name": "",
      "cpp_type": "",
      "id": 0,
      "state": {
        "is_disabled": false,
        "is_inactive": false
      },
      "configuration": {
        "Bool": {
          "default": 0,
          "value": 0
        }
      }
    }
  ],
  "blocked": false
}
