api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_control_bool.snap
---
source: api/src/v1/serde_tests.rs
expression: "ControlBool { default: 0, value: 1, }"
---
{
  "default": 0,
  "value": 1
}
