api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_control_option.snap
---
source: api/src/v1/serde_tests.rs
expression: "ControlOption { name: \"Auto\".into(), value: 0, }"
---
{
  "name": "Auto",
  "value": 0
}
