api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_control_slider.snap
---
source: api/src/v1/serde_tests.rs
expression: "ControlSlider { default: 50, value: 75, step: 5, max: 100, min: 0, }"
---
{
  "default": 50,
  "value": 75,
  "step": 5,
  "max": 100,
  "min": 0
}
