api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_control_state.snap
---
source: api/src/v1/serde_tests.rs
expression: "ControlState::default()"
---
{
  "is_disabled": false,
  "is_inactive": false
}
