api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_control_type_bool.snap
---
source: api/src/v1/serde_tests.rs
expression: "ControlType::Bool(ControlBool { default: 0, value: 1, })"
---
{
  "Bool": {
    "default": 0,
    "value": 1
  }
}
